# mapa_votos

./: .gitignore  analise eleicao2022.ipynb  index.html  pyproject.toml  teste.csv  votos.js
