[tool.poetry]
name = "eleicoes"
version = "0.1.0"
description = ""
authors = ["Chico Venancio <chicocvenancio@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
numpy = "^1.23.3"
jupyter = "^1.0.0"
notebook = "^6.4.12"
tables = "^3.7.0"


[tool.poetry.group.dev.dependencies]
notebook = "^6.4.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
